Point app to Render backend

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=sk-proj-anielepohng9eing5Ol6Phex3oin9geg-n0tr3al
 GOOGLE_API_KEY=AIzaSyAduKcoOvuGovuEx3uFysIzar-9CdU84H4
 PORT=3000
-BACKEND_URL=https://pn8.vibecode.run
+VITE_BACKEND_URL=https://pn8-2.onrender.com/
+VITE_VIBECODE_BACKEND_URL=https://pn8-2.onrender.com/
+BACKEND_URL=BACKEND_URL=https://pn8-backend.onrender.com
 BETTER_AUTH_SECRET="Ej2uPgHXQBvQtN1Yl1QBcFcHQLc+oK0HUJbZijmlhyk="
