--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@vibecodeapp/proxy": "^2.0.3",
     "better-auth": "^1.4.17",
     "hono": "4.6.0",
+    "resend": "^6.9.1",
     "zod": "4.1.11"
   }
 }
