--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "framework": null,
   "rewrites": [
     { "source": "/api/:path*", "destination": "/api" },
-    { "source": "/health", "destination": "/api" }
+    { "source": "/health", "destination": "/api" },
+    { "source": "/:path*", "destination": "/index.html" }
   ]
 }
