--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "postinstall": "cd backend && bun install && bunx prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "hono": "4.6.0",
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.4.17",
     "resend": "^6.9.1",
-    "zod": "4.1.11"
+    "zod": "4.1.11",
+    "prisma": "6"
   }
 }
